added fixtures simple crud and vue template
